# self_study

./: .env_example  .gitignore  README.md  profile  pyproject.toml
config/: settings.py  urls.py
my_tests/: admin.py  api.py  apps.py  models.py  serializers.py  tests.py  urls.py
my_tests/migrations/: 0001_initial.py  0002_alter_mytest_options_alter_question_options.py  0003_question_mytest.py  0004_remove_question_user_answer.py  0005_remove_mytest_score.py
src/: constants.py
study/: admin.py  api.py  apps.py  models.py  serializers.py  tests.py  urls.py
study/migrations/: 0001_initial.py  0002_alter_material_options_alter_section_options_and_more.py
users/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  urls.py
users/management/commands/: create_user.py  csu.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
